Project name changed to production-ready one; warnings addressed